# ascii-dag

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PRE_RELEASE_CHECKLIST.md  README.md  SETUP.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_GUIDE.md
examples/: auto_creation.rs  basic.rs  cross_level.rs  cross_level_test.rs  cycles.rs  dependency_analysis.rs  error_chain.rs  error_registry.rs  generic_cycles.rs  minimal.rs  parallel_test.rs  performance_test.rs  skewed_children.rs  stress_test.rs  test_promotion.rs  test_skewed.rs  topological_sort.rs
src/: cycles.rs  graph.rs  layout.rs  lib.rs
src/cycles/: generic.rs
src/cycles/generic/: roots.rs
src/layout/: generic.rs
src/layout/generic/: impact.rs  metrics.rs
src/render/: ascii.rs  mod.rs
