[package]
name = "ascii-dag"
version = "0.2.0"
edition = "2024"
authors = ["Ash"]
license = "MIT OR Apache-2.0"
description = "Lightweight ASCII DAG (Directed Acyclic Graph) renderer for error chains and dependency visualization"
repository = "https://github.com/AshutoshMahala/ascii-dag"
keywords = ["dag", "graph", "ascii", "visualization", "errors"]
categories = ["data-structures", "visualization", "no-std"]
readme = "README.md"
# Zero dependencies by default

[features]
default = ["std", "generic"]
std = []
warnings = ["std"]
# Optional modules for bundle size reduction
generic = []  # Enable generic cycle detection, topological sort, impact analysis, metrics
serde = []    # Future: serialization support

[dev-dependencies]

[lib]
name = "ascii_dag"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "error_chain"
path = "examples/error_chain.rs"

[[example]]
name = "generic_cycles"
path = "examples/generic_cycles.rs"
required-features = ["generic"]

[[example]]
name = "error_registry"
path = "examples/error_registry.rs"
required-features = ["generic"]

[[example]]
name = "topological_sort"
path = "examples/topological_sort.rs"
required-features = ["generic"]

[[example]]
name = "dependency_analysis"
path = "examples/dependency_analysis.rs"
required-features = ["generic"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
